// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epics/venues | error case: no network should get recommended places by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_EXPLORE_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get trending venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_TRENDING_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get venues categories 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_CATEGORIES_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get venues likes 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_LIKES_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get recommended places by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_EXPLORE_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get trending venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_TRENDING_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get venues categories 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_CATEGORIES_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get venues likes 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_LIKES_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should suggest completion for venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SUGGEST_COMPLETION_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should suggest completion for venues near to a location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SUGGEST_COMPLETION_FAILURE",
  },
]
`;

exports[`epics/venues should get recommended places by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get recommended places by location with custom parameter 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get recommended places near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get trending venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_TRENDING_SUCCESS",
  },
]
`;

exports[`epics/venues should get trending venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_TRENDING_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues by location with intent match parameter 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues by query 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues categories 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "56aa371be4b08b9a8d5734db",
            "name": "Amphitheater",
            "pluralName": "Amphitheaters",
            "shortName": "Amphitheater",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/aquarium_",
              "suffix": ".png",
            },
            "id": "4fceea171983d5d06c3e9823",
            "name": "Aquarium",
            "pluralName": "Aquariums",
            "shortName": "Aquarium",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/arcade_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1e1931735",
            "name": "Arcade",
            "pluralName": "Arcades",
            "shortName": "Arcade",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/artgallery_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1e2931735",
            "name": "Art Gallery",
            "pluralName": "Art Galleries",
            "shortName": "Art Gallery",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/bowling_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1e4931735",
            "name": "Bowling Alley",
            "pluralName": "Bowling Alleys",
            "shortName": "Bowling Alley",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/casino_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d17c941735",
            "name": "Casino",
            "pluralName": "Casinos",
            "shortName": "Casino",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79e7",
            "name": "Circus",
            "pluralName": "Circuses",
            "shortName": "Circus",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/comedyclub_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d18e941735",
            "name": "Comedy Club",
            "pluralName": "Comedy Clubs",
            "shortName": "Comedy Club",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_",
              "suffix": ".png",
            },
            "id": "5032792091d4c4b30a586d5c",
            "name": "Concert Hall",
            "pluralName": "Concert Halls",
            "shortName": "Concert Hall",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79ef",
            "name": "Country Dance Club",
            "pluralName": "Country Dance Clubs",
            "shortName": "Country Dance Club",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79e8",
            "name": "Disc Golf",
            "pluralName": "Disc Golf Courses",
            "shortName": "Disc Golf",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "56aa371be4b08b9a8d573532",
            "name": "Exhibit",
            "pluralName": "Exhibits",
            "shortName": "Exhibit",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1f1931735",
            "name": "General Entertainment",
            "pluralName": "General Entertainment",
            "shortName": "Entertainment",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/racetrack_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79ea",
            "name": "Go Kart Track",
            "pluralName": "Go Kart Tracks",
            "shortName": "Go Kart",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/historicsite_",
              "suffix": ".png",
            },
            "id": "4deefb944765f83613cdba6e",
            "name": "Historic Site",
            "pluralName": "Historic Sites",
            "shortName": "Historic Site",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/karaoke_",
              "suffix": ".png",
            },
            "id": "5744ccdfe4b0c0459246b4bb",
            "name": "Karaoke Box",
            "pluralName": "Karaoke Boxes",
            "shortName": "Karaoke",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79e6",
            "name": "Laser Tag",
            "pluralName": "Laser Tag Places",
            "shortName": "Laser Tag",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/historicsite_",
              "suffix": ".png",
            },
            "id": "5642206c498e4bfca532186c",
            "name": "Memorial Site",
            "pluralName": "Memorial Sites",
            "shortName": "Memorial Site",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/parks_outdoors/golfcourse_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79eb",
            "name": "Mini Golf",
            "pluralName": "Mini Golf Courses",
            "shortName": "Mini Golf",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
                  "suffix": ".png",
                },
                "id": "56aa371be4b08b9a8d5734de",
                "name": "Drive-in Theater",
                "pluralName": "Drive-in Theaters",
                "shortName": "Drive-in Theater",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d17e941735",
                "name": "Indie Movie Theater",
                "pluralName": "Indie Movie Theaters",
                "shortName": "Indie Movies",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d180941735",
                "name": "Multiplex",
                "pluralName": "Multiplexes",
                "shortName": "Cineplex",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d17f941735",
            "name": "Movie Theater",
            "pluralName": "Movie Theaters",
            "shortName": "Movie Theater",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_art_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d18f941735",
                "name": "Art Museum",
                "pluralName": "Art Museums",
                "shortName": "Art Museum",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/stripclub_",
                  "suffix": ".png",
                },
                "id": "559acbe0498e472f1a53fa23",
                "name": "Erotic Museum",
                "pluralName": "Erotic Museums",
                "shortName": "Erotic Museum",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_history_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d190941735",
                "name": "History Museum",
                "pluralName": "History Museums",
                "shortName": "History Museum",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_planetarium_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d192941735",
                "name": "Planetarium",
                "pluralName": "Planetariums",
                "shortName": "Planetarium",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_science_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d191941735",
                "name": "Science Museum",
                "pluralName": "Science Museums",
                "shortName": "Science Museum",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d181941735",
            "name": "Museum",
            "pluralName": "Museums",
            "shortName": "Museum",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_jazzclub_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1e7931735",
                "name": "Jazz Club",
                "pluralName": "Jazz Clubs",
                "shortName": "Jazz Club",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_pianobar_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1e8931735",
                "name": "Piano Bar",
                "pluralName": "Piano Bars",
                "shortName": "Piano Bar",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_rockclub_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1e9931735",
                "name": "Rock Club",
                "pluralName": "Rock Clubs",
                "shortName": "Rock Club",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1e5931735",
            "name": "Music Venue",
            "pluralName": "Music Venues",
            "shortName": "Music Venue",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "5744ccdfe4b0c0459246b4b8",
            "name": "Pachinko Parlor",
            "pluralName": "Pachinko Parlors",
            "shortName": "Pachinko Parlor",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d134941735",
                "name": "Dance Studio",
                "pluralName": "Dance Studios",
                "shortName": "Dance Studio",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_theater_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d135941735",
                "name": "Indie Theater",
                "pluralName": "Indie Theaters",
                "shortName": "Indie",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_operahouse_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d136941735",
                "name": "Opera House",
                "pluralName": "Opera Houses",
                "shortName": "Opera House",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_theater_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d137941735",
                "name": "Theater",
                "pluralName": "Theaters",
                "shortName": "Theater",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1f2931735",
            "name": "Performing Arts Venue",
            "pluralName": "Performing Arts Venues",
            "shortName": "Performing Arts",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/billiards_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1e3931735",
            "name": "Pool Hall",
            "pluralName": "Pool Halls",
            "shortName": "Billiards",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/parks_outdoors/sculpture_",
                  "suffix": ".png",
                },
                "id": "52e81612bcbc57f1066b79ed",
                "name": "Outdoor Sculpture",
                "pluralName": "Outdoor Sculptures",
                "shortName": "Outdoor Sculpture",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
                  "suffix": ".png",
                },
                "id": "52e81612bcbc57f1066b79ee",
                "name": "Street Art",
                "pluralName": "Street Art Installations",
                "shortName": "Street Art",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "507c8c4091d498d9fc8c67a9",
            "name": "Public Art",
            "pluralName": "Public Art",
            "shortName": "Public Art",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_track_",
              "suffix": ".png",
            },
            "id": "56aa371be4b08b9a8d573514",
            "name": "Racecourse",
            "pluralName": "Racecourses",
            "shortName": "Racecourse",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/racetrack_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1f4931735",
            "name": "Racetrack",
            "pluralName": "Racetracks",
            "shortName": "Racetrack",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79e9",
            "name": "Roller Rink",
            "pluralName": "Roller Rinks",
            "shortName": "Roller Rink",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
              "suffix": ".png",
            },
            "id": "52e81612bcbc57f1066b79ec",
            "name": "Salsa Club",
            "pluralName": "Salsa Clubs",
            "shortName": "Salsa Club",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
              "suffix": ".png",
            },
            "id": "56aa371be4b08b9a8d5734f9",
            "name": "Samba School",
            "pluralName": "Samba Schools",
            "shortName": "Samba School",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_baseball_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d18c941735",
                "name": "Baseball Stadium",
                "pluralName": "Baseball Stadiums",
                "shortName": "Baseball",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_basketball_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d18b941735",
                "name": "Basketball Stadium",
                "pluralName": "Basketball Stadiums",
                "shortName": "Basketball",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_cricket_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d18a941735",
                "name": "Cricket Ground",
                "pluralName": "Cricket Grounds",
                "shortName": "Cricket",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_football_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d189941735",
                "name": "Football Stadium",
                "pluralName": "Football Stadiums",
                "shortName": "Football",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_hockey_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d185941735",
                "name": "Hockey Arena",
                "pluralName": "Hockey Arenas",
                "shortName": "Hockey",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_football_",
                  "suffix": ".png",
                },
                "id": "56aa371be4b08b9a8d573556",
                "name": "Rugby Stadium",
                "pluralName": "Rugby Stadiums",
                "shortName": "Rugby",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_soccer_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d188941735",
                "name": "Soccer Stadium",
                "pluralName": "Soccer Stadiums",
                "shortName": "Soccer",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_tennis_",
                  "suffix": ".png",
                },
                "id": "4e39a891bd410d7aed40cbc2",
                "name": "Tennis Stadium",
                "pluralName": "Tennis Stadiums",
                "shortName": "Tennis",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_track_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d187941735",
                "name": "Track Stadium",
                "pluralName": "Track Stadiums",
                "shortName": "Track",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d184941735",
            "name": "Stadium",
            "pluralName": "Stadiums",
            "shortName": "Stadium",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/themepark_",
                  "suffix": ".png",
                },
                "id": "5109983191d435c0d71c2bb1",
                "name": "Theme Park Ride / Attraction",
                "pluralName": "Theme Park Rides/Attractions",
                "shortName": "Theme Park",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/themepark_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d182941735",
            "name": "Theme Park",
            "pluralName": "Theme Parks",
            "shortName": "Theme Park",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
              "suffix": ".png",
            },
            "id": "56aa371be4b08b9a8d573520",
            "name": "Tour Provider",
            "pluralName": "Tour Providers",
            "shortName": "Tour Provider",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/waterpark_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d193941735",
            "name": "Water Park",
            "pluralName": "Water Parks",
            "shortName": "Water Park",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/zoo_",
                  "suffix": ".png",
                },
                "id": "58daa1558bbb0b01f18ec1fd",
                "name": "Zoo Exhibit",
                "pluralName": "Zoo Exhibits",
                "shortName": "Zoo Exhibit",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/zoo_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d17b941735",
            "name": "Zoo",
            "pluralName": "Zoos",
            "shortName": "Zoo",
          },
        ],
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
          "suffix": ".png",
        },
        "id": "4d4b7104d754a06370d81259",
        "name": "Arts & Entertainment",
        "pluralName": "Arts & Entertainment",
        "shortName": "Arts & Entertainment",
      },
      Object {
        "categories": Array [
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d199941735",
                "name": "College Arts Building",
                "pluralName": "College Arts Buildings",
                "shortName": "Arts",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_communications_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d19a941735",
                "name": "College Communications Building",
                "pluralName": "College Communications Buildings",
                "shortName": "Communications",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_engineering_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d19e941735",
                "name": "College Engineering Building",
                "pluralName": "College Engineering Buildings",
                "shortName": "Engineering",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_history_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d19d941735",
                "name": "College History Building",
                "pluralName": "College History Buildings",
                "shortName": "History",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_math_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d19c941735",
                "name": "College Math Building",
                "pluralName": "College Math Buildings",
                "shortName": "Math",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_science_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d19b941735",
                "name": "College Science Building",
                "pluralName": "College Science Buildings",
                "shortName": "Science",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_technology_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d19f941735",
                "name": "College Technology Building",
                "pluralName": "College Technology Buildings",
                "shortName": "Technology",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/academicbuilding_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d198941735",
            "name": "College Academic Building",
            "pluralName": "College Academic Buildings",
            "shortName": "Academic Building",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/administrativebuilding_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d197941735",
            "name": "College Administrative Building",
            "pluralName": "College Administrative Buildings",
            "shortName": "Administrative Building",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/building/auditorium_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1af941735",
            "name": "College Auditorium",
            "pluralName": "College Auditoriums",
            "shortName": "Auditorium",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/bookstore_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1b1941735",
            "name": "College Bookstore",
            "pluralName": "College Bookstores",
            "shortName": "College Bookstore",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/cafeteria_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a1941735",
            "name": "College Cafeteria",
            "pluralName": "College Cafeterias",
            "shortName": "Cafeteria",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/classroom_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a0941735",
            "name": "College Classroom",
            "pluralName": "College Classrooms",
            "shortName": "Classroom",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/building/gym_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1b2941735",
            "name": "College Gym",
            "pluralName": "College Gyms",
            "shortName": "Gym",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/lab_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a5941735",
            "name": "College Lab",
            "pluralName": "College Labs",
            "shortName": "Lab",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/building/library_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a7941735",
            "name": "College Library",
            "pluralName": "College Libraries",
            "shortName": "Library",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/quad_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1aa941735",
            "name": "College Quad",
            "pluralName": "College Quads",
            "shortName": "Quad",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/reccenter_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a9941735",
            "name": "College Rec Center",
            "pluralName": "College Rec Centers",
            "shortName": "Rec Center",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/residencehall_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a3941735",
            "name": "College Residence Hall",
            "pluralName": "College Residence Halls",
            "shortName": "Residence Hall",
          },
          Object {
            "categories": Array [
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_baseball_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1bb941735",
                "name": "College Baseball Diamond",
                "pluralName": "College Baseball Diamonds",
                "shortName": "Baseball",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_basketball_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1ba941735",
                "name": "College Basketball Court",
                "pluralName": "College Basketball Courts",
                "shortName": "Basketball",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_cricket_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1b9941735",
                "name": "College Cricket Pitch",
                "pluralName": "College Cricket Pitches",
                "shortName": "Cricket",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_football_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1b8941735",
                "name": "College Football Field",
                "pluralName": "College Football Fields",
                "shortName": "Football",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_hockey_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1b5941735",
                "name": "College Hockey Rink",
                "pluralName": "College Hockey Rinks",
                "shortName": "Hockey",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_soccer_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1b7941735",
                "name": "College Soccer Field",
                "pluralName": "College Soccer Fields",
                "shortName": "Soccer",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_tennis_",
                  "suffix": ".png",
                },
                "id": "4e39a9cebd410d7aed40cbc4",
                "name": "College Tennis Court",
                "pluralName": "College Tennis Courts",
                "shortName": "Tennis Court",
              },
              Object {
                "categories": Array [],
                "icon": Object {
                  "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_track_",
                  "suffix": ".png",
                },
                "id": "4bf58dd8d48988d1b6941735",
                "name": "College Track",
                "pluralName": "College Tracks",
                "shortName": "Track",
              },
            ],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1b4941735",
            "name": "College Stadium",
            "pluralName": "College Stadiums",
            "shortName": "Stadium",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_theater_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ac941735",
            "name": "College Theater",
            "pluralName": "College Theaters",
            "shortName": "Theater",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/communitycollege_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a2941735",
            "name": "Community College",
            "pluralName": "Community Colleges",
            "shortName": "Community College",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/frathouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1b0941735",
            "name": "Fraternity House",
            "pluralName": "Fraternity Houses",
            "shortName": "Frat House",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/other_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a8941735",
            "name": "General College & University",
            "pluralName": "General Colleges & Universities",
            "shortName": "Education",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/lawschool_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1a6941735",
            "name": "Law School",
            "pluralName": "Law Schools",
            "shortName": "Law School",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/building/medical_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1b3941735",
            "name": "Medical School",
            "pluralName": "Medical Schools",
            "shortName": "Medical School",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/frathouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d141941735",
            "name": "Sorority House",
            "pluralName": "Sorority Houses",
            "shortName": "Sorority House",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/studentcenter_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ab941735",
            "name": "Student Center",
            "pluralName": "Student Centers",
            "shortName": "Student Center",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/tradeschool_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ad941735",
            "name": "Trade School",
            "pluralName": "Trade Schools",
            "shortName": "Trade School",
          },
          Object {
            "categories": Array [],
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/education/default_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ae941735",
            "name": "University",
            "pluralName": "Universities",
            "shortName": "University",
          },
        ],
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/education/default_",
          "suffix": ".png",
        },
        "id": "4d4b7105d754a06372d81259",
        "name": "College & University",
        "pluralName": "Colleges & Universities",
        "shortName": "College & Education",
      },
    ],
    "type": "GET_VENUES_CATEGORIES_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues likes 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Object {
      "count": 24,
      "items": Array [
        Object {
          "firstName": "Joe",
          "gender": "male",
          "id": "66019143",
          "lastName": "Benz",
          "photo": Object {
            "prefix": "https://fastly.4sqi.net/img/user/",
            "suffix": "/66019143_U7cpUhMp_MBPhsA_er-CfMmMiFXj2KsurXDZxMKR9KSiqf8vDKNtm8CuETX01F_RUzfyzjpa6.jpg",
          },
        },
        Object {
          "firstName": "Tyler",
          "gender": "male",
          "id": "275151",
          "lastName": "Elliott",
          "photo": Object {
            "prefix": "https://fastly.4sqi.net/img/user/",
            "suffix": "/275151-4G0WJJPRVXOCJBAS.jpg",
          },
        },
        Object {
          "firstName": "Miraculous",
          "gender": "none",
          "id": "29109434",
          "lastName": "Assembly",
          "photo": Object {
            "prefix": "https://fastly.4sqi.net/img/user/",
            "suffix": "/29109434_EKGvTLjo_d3wFukA0xdHXaFwxCMmxzb3BoI_6W1JQVeXLs3rgbsD3tGOPhAZoY8-wnUghn_LP",
          },
        },
      ],
      "summary": "24 Likes",
    },
    "type": "GET_VENUES_LIKES_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should suggest completion for venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "4f045eeb00399761c77301e3",
        "location": Object {
          "address": "27 Prince St",
          "city": "New York",
          "country": "US",
          "crossStreet": "btwn Mott & Elizabeth St",
          "distance": 343,
          "lat": 40.722905825704764,
          "lng": -73.99466690110555,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Prince Street Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "45ebc982f964a52091431fe3",
        "location": Object {
          "address": "7 Carmine St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at 6th Ave",
          "distance": 728,
          "lat": 40.730491197306435,
          "lng": -74.00188088169593,
          "postalCode": "10014",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a52062e61ee3",
        "location": Object {
          "address": "32 Spring St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at Mott St",
          "distance": 480,
          "lat": 40.72156708733683,
          "lng": -73.99559138323225,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Lombardi's Coal Oven Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "51351c3fe4b0c58b63965114",
        "location": Object {
          "address": "150 E 14th St",
          "city": "New York",
          "country": "US",
          "crossStreet": "3rd Ave.",
          "distance": 1097,
          "lat": 40.733386570577345,
          "lng": -73.98731060842591,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/winery_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d123941735",
            "name": "Wine Bar",
            "pluralName": "Wine Bars",
            "shortName": "Wine Bar",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/italian_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d110941735",
            "name": "Italian Restaurant",
            "pluralName": "Italian Restaurants",
            "shortName": "Italian",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06376d81259",
            "name": "Nightlife Spot",
            "pluralName": "Nightlife Spots",
            "shortName": "Nightlife",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d116941735",
            "name": "Bar",
            "pluralName": "Bars",
            "shortName": "Bar",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a520c7f11ee3",
        "location": Object {
          "address": "1 5th Ave",
          "city": "New York",
          "country": "US",
          "crossStreet": "at E 8th St",
          "distance": 681,
          "lat": 40.731990997794966,
          "lng": -73.99622300550848,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Otto Enoteca Pizzeria",
      },
    ],
    "type": "GET_VENUES_SUGGEST_COMPLETION_SUCCESS",
  },
]
`;

exports[`epics/venues should suggest completion for venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "4f045eeb00399761c77301e3",
        "location": Object {
          "address": "27 Prince St",
          "city": "New York",
          "country": "US",
          "crossStreet": "btwn Mott & Elizabeth St",
          "distance": 343,
          "lat": 40.722905825704764,
          "lng": -73.99466690110555,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Prince Street Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "45ebc982f964a52091431fe3",
        "location": Object {
          "address": "7 Carmine St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at 6th Ave",
          "distance": 728,
          "lat": 40.730491197306435,
          "lng": -74.00188088169593,
          "postalCode": "10014",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a52062e61ee3",
        "location": Object {
          "address": "32 Spring St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at Mott St",
          "distance": 480,
          "lat": 40.72156708733683,
          "lng": -73.99559138323225,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Lombardi's Coal Oven Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "51351c3fe4b0c58b63965114",
        "location": Object {
          "address": "150 E 14th St",
          "city": "New York",
          "country": "US",
          "crossStreet": "3rd Ave.",
          "distance": 1097,
          "lat": 40.733386570577345,
          "lng": -73.98731060842591,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/winery_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d123941735",
            "name": "Wine Bar",
            "pluralName": "Wine Bars",
            "shortName": "Wine Bar",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/italian_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d110941735",
            "name": "Italian Restaurant",
            "pluralName": "Italian Restaurants",
            "shortName": "Italian",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06376d81259",
            "name": "Nightlife Spot",
            "pluralName": "Nightlife Spots",
            "shortName": "Nightlife",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d116941735",
            "name": "Bar",
            "pluralName": "Bars",
            "shortName": "Bar",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a520c7f11ee3",
        "location": Object {
          "address": "1 5th Ave",
          "city": "New York",
          "country": "US",
          "crossStreet": "at E 8th St",
          "distance": 681,
          "lat": 40.731990997794966,
          "lng": -73.99622300550848,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Otto Enoteca Pizzeria",
      },
    ],
    "type": "GET_VENUES_SUGGEST_COMPLETION_SUCCESS",
  },
]
`;
